--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,93 +1,198 @@
-* {
-  padding:0;
-  margin:0;
-  font-size: 1.7vw;
+@media (orientation: landscape) {
+
+  * {
+    padding:0;
+    margin:0;
+    font-size: 1.7vw;
+  }
+
+  #page_container {
+    display: flex;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  #page_container h1 {
+    margin-top: 1vh;
+    color: #ffcd00;
+    -webkit-text-stroke:0.05vw black;
+
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2vw;
+  }
+
+  #home_container {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 20vh;
+
+    background-color: rgb(184, 208, 220);
+
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+    border-radius: 1.5vh;
+
+    width: 40vw;
+  }
+
+  #home_logo {
+    width: 18vw;
+    margin-top: 1vh;
+  }
+
+  #search_bar {
+    height: 4vh;
+    width: 50%;
+    border: 0px;
+
+    font-size: 1vw;
+
+    margin-top: 3vh;
+
+    padding-left: 0.5vw;
+
+    border-radius: 1.5vh;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 0.2vw;
+  }
+
+  #search_icon {
+    color: black;
+    scale: 80%;
+  }
+
+  #search_button {
+    height: 50%;
+    width: 10%;
+
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+
+    border: 0;
+    border-radius: 1.5vh;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 0.2vw;
+  }
+
+  #search_button:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+
+  #search_button:active {
+    scale: 95%;
+    transition-duration: 0s;
+  }
+
 }
 
-#page_container {
-  display: flex;
-  flex-direction: row;
+@media (orientation: portrait) {
 
-  justify-content: center;
-  align-items: center;
-}
+  * {
+    padding:0;
+    margin:0;
+    font-size: 1.7vw;
+  }
 
-#page_container h1 {
-  margin-top: 1vh;
-  color: #ffcd00;
-  -webkit-text-stroke:0.05vw black;
+  #page_container {
+    display: flex;
+    flex-direction: row;
 
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-size: 2vw;
-}
+    justify-content: center;
+    align-items: center;
+  }
 
-#home_container {
-  display: flex;
-  flex-direction: column;
+  #page_container h1 {
+    margin-top: 1vh;
+    color: #ffcd00;
+    -webkit-text-stroke:0.05vw black;
 
-  justify-content: center;
-  align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 10vw;
+  }
 
-  margin-top: 20vh;
+  #home_container {
+    display: flex;
+    flex-direction: column;
 
-  background-color: rgb(184, 208, 220);
+    justify-content: center;
+    align-items: center;
 
-  border-style: solid;
-  border-color: rgb(31, 134, 186);
-  border-radius: 1.5vh;
+    margin-top: 20vh;
 
-  width: 40vw;
-}
+    background-color: rgb(184, 208, 220);
 
-#home_container img {
-  scale: 160%;
-}
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+    border-radius: 1.5vh;
+    border-width: 0.4vh;
 
-#search_bar {
-  height: 4vh;
-  width: 50%;
-  border: 0px;
+    width: 90vw;
+  }
 
-  font-size: 1vw;
+  #home_logo {
+    width: 85vw;
+    margin-top: 0.5vh;
+  }
 
-  margin-top: 3vh;
+  #search_bar {
+    height: 4vh;
+    width: 80%;
+    border: 0px;
 
-  padding-left: 0.5vw;
+    font-size: 3vw;
 
-  border-radius: 1.5vh;
+    margin-top: 3vh;
 
-  border-style: solid;
-  border-color: black;
-  border-width: 0.2vw;
-}
+    padding-left: 0.5vw;
 
-#search_icon {
-  color: black;
-  scale: 80%;
-}
+    border-radius: 1.5vh;
 
-#search_button {
-  height: 50%;
-  width: 10%;
+    border-style: solid;
+    border-color: black;
+    border-width: 0.4vh;
+  }
 
-  margin-top: 1vh;
-  margin-bottom: 1vh;
+  #search_icon {
+    color: black;
+    scale: 280%;
+  }
 
-  border: 0;
-  border-radius: 1.5vh;
+  #search_button {
+    height: 4vh;
+    width: 11%;
 
-  border-style: solid;
-  border-color: black;
-  border-width: 0.2vw;
-}
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 
-#search_button:hover {
-  scale: 105%;
-  transition-duration: 0.3s;
-  cursor: pointer;
-}
+    border: 0;
+    border-radius: 1.5vh;
 
-#search_button:active {
-  scale: 95%;
-  transition-duration: 0s;
+    border-style: solid;
+    border-color: black;
+    border-width: 0.3vh;
+  }
+
+  #search_button:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+
+  #search_button:active {
+    scale: 95%;
+    transition-duration: 0s;
+  }
+
 }
