--- a/src/Navbar.module.css
+++ b/src/Navbar.module.css
@@ -1,79 +1,177 @@
-* {
-  padding:0;
-  margin:0;
-  font-size: 1.7vw;
+@media (orientation: landscape) {
+
+  * {
+    padding:0;
+    margin:0;
+    font-size: 1.7vw;
+  }
+
+  #navbar_logo {
+    margin-right: auto;
+
+    width: 18vw;
+    margin-left: 1vw;
+  }
+
+  #navbar_logo:hover {
+    cursor: pointer;
+  }
+
+
+  #navbar {
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+    height: 10vh;
+
+    background-color: #0f1a3a;
+    align-items: center;
+    justify-content: end;
+
+    position: sticky;
+    top: 0;
+  }
+
+  #search_bar_container {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+
+    width: 28%;
+  }
+
+  #search_bar {
+    height: 4vh;
+    width: 100%;
+    border: 0px;
+
+    font-size: 1vw;
+
+    border-radius: 1.5vh;
+    padding-left: 0.5vw;
+    margin-right: 0.5vw;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 0.2vw;
+  }
+
+  #search_icon {
+    color: black;
+    scale: 80%;
+  }
+
+  #search_button {
+    height: 50%;
+    width: 20%;
+
+    border: 0;
+    border-radius: 1.5vh;
+
+    margin-right: 2vw;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 0.2vw;
+  }
+
+  #search_button:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
+
+  #search_button:active {
+    scale: 95%;
+    transition-duration: 0s;
+  }
+
 }
 
-#navbar_logo {
-  margin-right: auto;
-  margin-left: 4vw;
+@media (orientation: portrait) {
 
-  scale: 150%;
+  * {
+    padding:0;
+    margin:0;
+    font-size: 1.7vw;
+  }
+
+  #navbar_logo {
+    width: 85vw;
+  }
+
+  #navbar {
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 17vh;
+
+    background-color: #0f1a3a;
+    align-items: center;
+    justify-content: center;
+
+    position: sticky;
+    top: 0;
+  }
+
+  #search_bar_container {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 2vh;
+    width: 100%;
+  }
+
+  #search_bar {
+    height: 4vh;
+    width: 50%;
+    border: 0px;
+
+    font-size: 3vw;
+
+    border-radius: 1.5vh;
+    padding-left: 0.5vw;
+
+    border-style: solid;
+    border-color: black;
+    border-width: 0.4vh;
 }
 
-#navbar_logo:hover {
-  cursor: pointer;
-}
+  #search_icon {
+    color: black;
+    scale: 280%;
+  }
 
+  #search_button {
+    height: 4.7vh;
+    width: 11%;
 
-#navbar {
-  display: flex;
-  flex-direction: row;
+    border: 0;
+    border-radius: 1.5vh;
 
-  width: 100%;
-  height: 10vh;
+    border-style: solid;
+    border-color: black;
+    border-width: 0.4vh;
 
-  background-color: #0f1a3a;
-  align-items: center;
-  justify-content: end;
+    margin-left: 1vw;
+  }
 
-  position: sticky;
-  top: 0;
-}
+  #search_button:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
+    cursor: pointer;
+  }
 
-#search_bar {
-  height: 4vh;
-  width: 20%;
-  border: 0px;
+  #search_button:active {
+    scale: 95%;
+    transition-duration: 0s;
+  }
 
-  font-size: 1vw;
-
-  margin-right: 0.5vw;
-
-  border-radius: 1.5vh;
-  padding-left: 0.5vw;
-
-  border-style: solid;
-  border-color: black;
-  border-width: 0.2vw;
-}
-
-#search_icon {
-  color: black;
-  scale: 80%;
-}
-
-#search_button {
-  height: 50%;
-  width: 4%;
-
-  border: 0;
-  border-radius: 1.5vh;
-
-  margin-right: 2vw;
-
-  border-style: solid;
-  border-color: black;
-  border-width: 0.2vw;
-}
-
-#search_button:hover {
-  scale: 105%;
-  transition-duration: 0.3s;
-  cursor: pointer;
-}
-
-#search_button:active {
-  scale: 95%;
-  transition-duration: 0s;
 }
