--- a/src/Searchresults.module.css
+++ b/src/Searchresults.module.css
@@ -1,135 +1,490 @@
-* {
-  padding:0;
-  margin:0;
-  font-size: 1.7vw;
+@media (orientation: landscape) {
+
+  * {
+    padding:0;
+    margin:0;
+    font-size: 1.7vw;
+  }
+
+  body, html {
+    height: 100%;
+
+    background-image: url("background.jpg");
+
+    background-size: 100% auto;
+    background-size: cover;
+    background-attachment: fixed;
+    white-space: nowrap;
+  }
+
+  a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  #full_page {
+    width: 100%;
+    padding-bottom: 5vh;
+    
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
+
+  .search_title {
+    margin-bottom: 2vh;
+    margin-top: 3vh;
+  }
+
+  #filter_box {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 1.5vh;
+    padding-left: 20vh;
+    padding-right: 20vh;
+
+    background-color: rgb(184, 208, 220, 0.8);
+
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+
+    margin-top: 5vh;
+
+    width: 43vw;
+
+    padding: 2vh;
+  }
+
+  #filter_box h1 {
+    font-size: 1.3vw;
+  }
+
+  .checkbox_div {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: center;
+
+    margin-left: 1vw;
+    margin-right: 1vw;
+  }
+
+  .checkbox {
+    width: 3.5vh;
+    height: 3.5vh;
+
+    border-radius: 1vh;
+    vertical-align: middle;
+    border: 0.4vh solid rgb(15, 86, 121);
+    appearance: none;
+    outline: none;
+    cursor: pointer;
+
+    margin-left: 1vh;
+  }
+
+  .checkbox:hover {
+    background-color: rgb(138, 191, 217);
+  }
+
+  .checkbox:checked {
+    background-color: rgb(76, 158, 198);
+  }
+
+  .checkbox_text {
+    font-size: 1.3vw;
+  }
+
+  .results_section {
+    display: flex;
+    flex-direction: column;
+
+    border-radius: 1.5vh;
+    padding-left: 20vh;
+    padding-right: 20vh;
+
+    background-color: rgb(184, 208, 220, 0.8);
+
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+
+    margin-top: 5vh;
+  }
+
+  #info_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    font-size: 1vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    padding: 2vh;
+    
+    border-radius: 1.5vh;
+    width: 50vw;
+    height: 10vh;
+
+    background-color: rgb(165, 204, 219);
+
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+  }
+
+  #info_container:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
+
+    cursor: pointer;
+  }
+
+  #pokemon_number {
+    margin-left: 2vw;
+    margin-right: 3.25vw;
+
+    width: 2vw;
+
+    font-weight: bold;
+    font-size: 1.2vw;
+  }
+
+  #info_container img {
+    margin-left: 3.25vw;
+    margin-right: 3.25vw;
+
+    width: 6vw;
+  }
+
+  #pokemon_name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 8vw;
+
+    font-family: Ebrima;
+    font-weight: bold;
+  }
+
+  #pokemon_name p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 8vw;
+
+    font-family: Ebrima;
+    font-weight: bold;
+    font-size: 1.2vw;
+  }
+
+  #pokemon_types {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    left: 70vw;
+
+    margin-left: 3.25vw;
+    margin-right: 3.25vw;
+
+    width: 5vw;
+  }
+
+  #pokemon_types div {
+    font-size: 1vw;
+
+    margin-top: 0.5vw;
+    padding: 0.2vw;
+    
+    border-style: solid;
+    border-width: 0.15vw;
+    border-radius: 0.3vw;
+  }
+
+  #pokemon_abilities {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    left: 70vw;
+
+    width: 9vw;
+  }
+
+  #pokemon_abilities p {
+    font-size: 1vw;
+  }
+
+  #ability_name {
+    margin-left: 2vw;
+    margin-right: 2vw;
+
+    width: 30vh;
+
+    font-weight: bold;
+    font-size: 1.2vw;
+  }
+
+  #ability_description {
+    font-size: 1vw;
+
+    width: 30vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+  }
+
+  #item_name {
+    margin-left: 2vw;
+    margin-right: 2vw;
+
+    width: 30vh;
+
+    font-weight: bold;
+    font-size: 1.2vw;
+  }
+
+  #item_image {
+    padding-right: 2vw;
+  }
+
+  #item_description {
+    font-size: 1vw;
+
+    width: 30vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+  }
+
+  #move_name {
+    font-size: 1vw;
+
+    width: 18vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+
+    display: flex;
+    flex-direction: row;
+    
+    font-weight: bold;
+
+    margin-left: 2vw;
+    margin-right: 2vw;
+
+    font-size: 1.2vw;
+  }
+
+  #move_description {
+    font-size: 1vw;
+
+    width: 35vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+
+    display: flex;
+    flex-direction: row;
+
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+  }
+
+  #move_type {
+    font-size: 1vw;
+
+    width: 10vw;
+
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+
+    font-size: 1vw;
+
+    margin-top: 0.5vw;
+    padding: 0.2vw;
+    
+    border-style: solid;
+    border-width: 0.15vw;
+    border-radius: 0.3vw;
+
+    text-align: center;
+  }
+
+  #move_power {
+    font-size: 1vw;
+
+    width: 9vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+
+    display: flex;
+    flex-direction: row;
+
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+
+    text-align: center;
+  }
+
+  #move_accuracy {
+    font-size: 1vw;
+
+    width: 9vw;
+
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    word-break: break-word;
+
+    display: flex;
+    flex-direction: row;
+
+    margin-left: 0.5vw;
+    margin-right: 0.5vw;
+
+    text-align: center;
+  }
+
 }
 
-body, html {
-  height: 100%;
+@media (orientation: portrait) {
 
-  background-image: url("background.jpg");
+  * {
+    padding:0;
+    margin:0;
+    font-size: 3vw;
+  }
 
-  background-size: 100% auto;
-  background-size: cover;
-  background-attachment: fixed;
-  white-space: nowrap;
-}
+  body, html {
+    height: 100%;
 
-a:hover, a:visited, a:link, a:active {
-  text-decoration: none;
-  color: inherit;
-}
+    background-image: url("background.jpg");
 
-#full_page {
-  width: 100%;
-  padding-bottom: 5vh;
-  
-  display: flex;
-  flex-direction: column;
+    background-size: 100% auto;
+    background-size: cover;
+    background-attachment: fixed;
+    white-space: nowrap;
+  }
 
-  align-items: center;
-}
+  a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+    color: inherit;
+  }
 
-#pokemon_info_container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  #full_page {
+    width: 100%;
+    padding-bottom: 5vh;
+    
+    display: flex;
+    flex-direction: column;
 
-  font-size: 1vw;
-  margin-top: 1vh;
-  margin-bottom: 1vh;
-  padding: 2vh;
-  
-  border-radius: 1.5vh;
-  width: 43vw;
-  height: 10vh;
+    align-items: center;
+  }
 
-  background-color: rgb(184, 208, 220);
+  #info_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  border-style: solid;
-  border-color: rgb(31, 134, 186);
-}
+    font-size: 3vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    padding: 2vh;
+    
+    border-radius: 1.5vh;
+    width: 75vw;
 
-#pokemon_info_container:hover {
-  scale: 105%;
-  transition-duration: 0.3s;
+    background-color: rgb(184, 208, 220);
 
-  cursor: pointer;
-}
+    border-style: solid;
+    border-color: rgb(31, 134, 186);
+    border-width: 0.4vh;
+  }
 
-#pokemon_number {
-  margin-left: 2vw;
-  margin-right: 2vw;
+  #info_container:hover {
+    scale: 105%;
+    transition-duration: 0.3s;
 
-  width: 2vw;
+    cursor: pointer;
+  }
 
-  font-weight: bold;
-}
+  #pokemon_number {
+    font-size: 6vw;
 
-#pokemon_info_container img {
-  margin-left: 1vw;
-  margin-right: 1vw;
+    font-weight: bold;
+  }
 
-  width: 6vw;
-}
+  #info_container img {
+    width: 40vw;
+  }
 
-#pokemon_name {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  #pokemon_name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  width: 8vw;
+    width: 8vw;
 
-  font-family: Ebrima;
-  font-weight: bold;
-}
+    font-family: Ebrima;
+    font-weight: bold;
+  }
 
-#pokemon_name p {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  #pokemon_name p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  width: 8vw;
+    width: 8vw;
 
-  font-family: Ebrima;
-  font-weight: bold;
-  font-size: 1.3vw;
-}
+    font-family: Ebrima;
+    font-weight: bold;
+    font-size: 6vw;
+  }
 
-#pokemon_types {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  #pokemon_types {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
-  left: 70vw;
+  #pokemon_types div {
+    font-size: 5vw;
 
-  margin-left: 2vw;
-  margin-right: 2vw;
+    margin-top: 1.5vh;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
+    padding: 1vw;
+    
+    border-style: solid;
+    border-width: 0.15vw;
+    border-radius: 2vw;
+  }
 
-  width: 5vw;
-}
+  #pokemon_abilities {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 1.5vh;
+  }
 
-#pokemon_types div {
-  font-size: 1vw;
+  #pokemon_abilities p {
+    font-size: 4vw;
 
-  margin-top: 0.5vw;
-  padding: 0.2vw;
-  
-  border-style: solid;
-  border-width: 0.15vw;
-  border-radius: 0.3vw;
-}
+    margin-right: 2vw;
+    margin-left: 2vw;
+  }
 
-#pokemon_abilities {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  left: 70vw;
-
-  width: 9vw
-}
-
-#pokemon_abilities p {
-  font-size: 1vw;
 }
